plugins {
    id 'java'
}

group 'uwu.smsgamer'
version '1.0'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation fileTree("libs")
    testCompile group: 'junit', name: 'junit', version: '4.12'
    implementation 'org.jetbrains:annotations:15.0'
}
